--- a/covid-19/scripts/widget/lib/styles.css
+++ b/covid-19/scripts/widget/lib/styles.css
@@ -27,15 +27,15 @@
 	margin-bottom: 2mm;
 
 	background: transparent;
-	background: linear-gradient(180deg, #e1e1e1ff 0%, #e1e1e130 30%, #e1e1e100 100%);
+	background: linear-gradient(180deg, #e1e1e1ff 0%, #e1e1e120 20%, #e1e1e100 100%);
 }
 .Cv19SMW FORM:after { display:block; clear:left; content:""; }
+.Cv19SMW FORM P { white-space: nowrap; }
 .Cv19SMW FORM P SELECT.country { width: 350px; }
 .Cv19SMW .remove-btn { margin-left: 5px; margin-right:10px; visibility:hidden; }
 .Cv19SMW FORM LABEL.option { display:inline-block; visibility:hidden; white-space:nowrap; line-height:0.9em; }
 .Cv19SMW FORM LABEL.option INPUT { float:left; margin: 0 3px; }
 
-.Cv19SMW .tabs { padding-bottom: 1mm; }
 .Cv19SMW .tabs TABLE { table-layout: fixed; border-spacing:0; }
 .Cv19SMW .tabs TABLE TD
 {
@@ -49,25 +49,34 @@
 	padding: 1mm;
 	color: black;
 	cursor: pointer;
+	border: 1px solid transparent;
 	border-bottom: 1px solid black;
 }
 .Cv19SMW .tabs TABLE TD.active A
 {
 	border: 1px solid black;
-	border-bottom: 1px solid transparent;
+	border-bottom: 1px solid #fff;
 	border-radius: 1mm 1mm 0 0;
 	background-color: white;
 }
 .Cv19SMW .tabs TABLE TD A:hover
 {
 	background-color: white;
-	border-bottom: 1px solid #f1f1f1;
+	border: 1px solid #e1e1e1;
+	border-bottom: 1px solid #fff;
 	border-radius: 1mm 1mm 0 0;
 
 }
 
-.Cv19SMW .svg { float:left; margin-right: 20px; margin-bottom: 10px; }
-.Cv19SMW .svg:last-child { margin-right:0; }
+.Cv19SMW .svg
+{
+	float: left;
+	padding-top: 1mm;
+/*	margin-right: 20px;*/
+	margin-bottom: 10px;
+	background-color: white;
+}
+/*.Cv19SMW .svg:last-child { margin-right:0; }*/
 .Cv19SMW .svg UL.legend
 {
 	width: 450px;
