--- a/covid-19/scripts/widget/lib/styles.css
+++ b/covid-19/scripts/widget/lib/styles.css
@@ -104,7 +104,7 @@
 }
 .Cv19SMW .svg TABLE.analytic_data TR:nth-child(odd) TD { background-color: #f1f1f1; }
 .Cv19SMW .svg TABLE.analytic_data TD:nth-child(2) { width: 10mm; }
-.Cv19SMW .svg TABLE.analytic_data TD { padding: 0 1mm; }
+.Cv19SMW .svg TABLE.analytic_data TD { padding: 1mm; }
 
 .Cv19SMW .svg TABLE.analytic_data .infected_per_period INPUT { width: 10mm; margin: 0 1mm; }
 .Cv19SMW .svg TABLE.analytic_data .infected_per_x INPUT { width: 20mm; margin: 0 1mm; }
