--- a/covid-19/scripts/widget/lib/styles.css
+++ b/covid-19/scripts/widget/lib/styles.css
@@ -109,6 +109,15 @@
 .Cv19SMW .svg TABLE.analytic_data .infected_per_period INPUT { width: 10mm; margin: 0 1mm; }
 .Cv19SMW .svg TABLE.analytic_data .infected_per_x INPUT { width: 20mm; margin: 0 1mm; }
 
+.Cv19SMW .toolbar
+{
+	padding: 1mm;
+	font-size: 0.9em;
+	background-color: #ffffcc;
+}
+.Cv19SMW .toolbar LABEL INPUT { float:left; }
+.Cv19SMW .toolbar LABEL SPAN { display:inline-block; padding-top:1px; }
+
 /* from: https://www.w3schools.com/css/css_tooltip.asp */
 .Cv19SMWtooltiptext {
     visibility: hidden;
