--- a/covid-19/scripts/widget/lib/styles.css
+++ b/covid-19/scripts/widget/lib/styles.css
@@ -39,7 +39,7 @@
 .Cv19SMW .tabs TABLE { table-layout: fixed; border-spacing:0; }
 .Cv19SMW .tabs TABLE TD
 {
-	width: 33%;
+	width: 25%;
 	text-align: center;
 	padding: 0;
 }
@@ -77,9 +77,17 @@
 	background-color: white;
 }
 /*.Cv19SMW .svg:last-child { margin-right:0; }*/
+
+.Cv19SMW .compare_slection
+{
+	font-size: 12px;
+	padding-left: 5mm;
+}
+.Cv19SMW .compare_slection SELECT { width: 400px; }
+
 .Cv19SMW .svg UL.legend
 {
-	width: 450px;
+	width: 480px;
 	padding-left: 5mm;
 	margin: 0;
 	list-style: none;
@@ -87,6 +95,22 @@
 .Cv19SMW .svg UL.legend LI { float:left; padding-bottom:1mm; margin-left:4mm; }
 .Cv19SMW .svg UL.legend LI A { text-decoration: none; color: black; cursor:pointer; }
 .Cv19SMW .svg UL.legend LI A:hover { text-decoration: underline; }
+.Cv19SMW .svg UL.legend LI SPAN,
+.Cv19SMW .svg UL.legend LI A
+{
+	display: inline-block;
+	padding-left: 5px;
+	height: 10px;
+	font-size: 12px;
+	line-height: 11px;
+}
+
+.Cv19SMW .svg UL.legend LI A.sup_x
+{
+	padding-left: 0;
+	vertical-align: super;
+	font-size: 0.7em;
+}
 
 .Cv19SMW .svg TABLE.legend
 {
