--- a/covid-19/scripts/widget/lib/styles.css
+++ b/covid-19/scripts/widget/lib/styles.css
@@ -33,7 +33,7 @@
 .Cv19SMW FORM P { white-space: nowrap; }
 .Cv19SMW FORM P SELECT.country { width: 350px; background-color:white; }
 .Cv19SMW .remove-btn { margin-left: 5px; margin-right:10px; visibility:hidden; }
-.Cv19SMW FORM LABEL.option { display:inline-block; visibility:hidden; white-space:nowrap; line-height:0.9em; }
+.Cv19SMW FORM LABEL.option { display:inline-block; visibility:hidden; white-space:nowrap; line-height:0.9em; padding-right:10px; }
 .Cv19SMW FORM LABEL.option INPUT { float:left; margin: 0 3px; }
 
 .Cv19SMW .tabs TABLE { table-layout: fixed; border-spacing:0; }
